--- a/config.yml
+++ b/config.yml
@@ -25,6 +25,6 @@ assembly_line:
   - type: wechat
     parameters:
       corp_id: {env.corp_id}
-      secret: {env.sub_url}
+      secret: {env.corp_secret}
       agent_id: 1000002
       text: "The subscription is successfully uploaded."
