--- a/config.yml
+++ b/config.yml
@@ -17,14 +17,14 @@ assembly_line:
       method: GET
   - type: gist
     parameters:
-      gist_id: {env.gist_id}
-      access_token: {env.git_token}
+      gist_id: "{env.gist_id}"
+      access_token: "{env.git_token}"
       action: UPDATE
       file_name: "file.txt"
       text: "{input.text}"
   - type: wechat
     parameters:
-      corp_id: {env.corp_id}
-      secret: {env.corp_secret}
+      corp_id: "{env.corp_id}"
+      secret: "{env.corp_secret}"
       agent_id: 1000002
       text: "The subscription is successfully uploaded."
