--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -17,8 +17,8 @@ jobs:
 
       - name: Download
         run: |
-          curl -L https://github.com/zhzy0077/assembly-lines/releases/download/v0.2/assembly-lines-linux-x64 -o assembly-lines-linux-x64
-          chmod +x assembly-lines-linux-x64
+          curl -L https://github.com/zhzy0077/workflows/releases/download/v0.2/workflows-linux-x64 -o workflows-linux-x64
+          chmod +x workflows-linux-x64
 
       # Runs a set of commands using the runners shell
       - name: Run
@@ -28,4 +28,4 @@ jobs:
           corp_id: ${{ secrets.CORP_ID }}
           corp_secret: ${{ secrets.CORP_SECRET }}
           sub_url: ${{ secrets.SUB_URL }}
-        run: ./assembly-lines-linux-x64 config.yml
+        run: ./workflows-linux-x64 config.yml
