--- a/config.yml
+++ b/config.yml
@@ -1,4 +1,4 @@
-assembly_line:
+workflows:
   - type: download
     parameters:
       url: https://github.com/tindy2013/subconverter/releases/download/v0.6.4/subconverter_linux64.tar.gz
